<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_record_basic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"

        app:cardCornerRadius="2dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="1"
            android:padding="5dp"
            android:rowCount="3">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_column="0"

                android:layout_row="0"
                android:clickable="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:paddingLeft="5dp"
                        android:text="Start"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:paddingTop="10dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/txt_record_start_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:focusable="false"
                                android:hint="Date"
                                android:inputType="textMultiLine" />

                            <EditText
                                android:id="@+id/txt_record_start_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:focusable="false"
                                android:hint="Time"
                                android:inputType="textMultiLine" />
                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_column="0"
                android:layout_row="1"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:paddingLeft="5dp"
                        android:text="End"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:paddingTop="10dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/txt_record_end_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:focusable="false"
                                android:hint="Date"
                                android:inputType="textMultiLine" />

                            <EditText
                                android:id="@+id/txt_record_end_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:focusable="false"
                                android:hint="Time"
                                android:inputType="textMultiLine" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_column="0"
                android:layout_row="2"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:text="Intensity"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:id="@+id/layout_intensity">

                        <TextView
                            android:id="@+id/txt_record_intensity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:autoText="false"
                            android:clickable="true"
                            android:gravity="center_vertical"
                            android:hint="Click to set" />
                    </RelativeLayout>

                </LinearLayout>
            </RelativeLayout>
        </GridLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>