...
            </LinearLayout>

        </android.support.design.widget.CoordinatorLayout>

        <!-- Your FAB implementation -->
        <shehan.com.migrainetrigger.utility.customview.SheetFab
            android:id="@+id/fab"
            style="@style/Widget.MaterialSheetFab.Fab"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin" />

...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Basic -->
                    <TextView
                        android:id="@+id/fab_sheet_item_basic"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/new_fab_basic" />

                    <!-- Intermediate -->
                    <TextView
                        android:id="@+id/fab_sheet_item_intermediate"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/new_fab_inter" />

                    <!-- Full -->
                    <TextView
...
