<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:background="?android:attr/selectableItemBackground"
        android:icon="@drawable/ic_cloud_download_white_24dp"
        android:orderInCategory="3"
        android:title="@string/new_record_sync"
        app:showAsAction="always" />
</menu>