<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/card_view_record_intermediate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"

        app:cardCornerRadius="2dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="1"
            android:padding="5dp"
            android:rowCount="3">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_column="0"

                android:layout_row="0"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:text="Triggers"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <EditText
                        android:id="@+id/txt_record_triggers"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="textMultiLine" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_column="0"
                android:layout_row="1"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:text="Symptoms"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <EditText
                        android:id="@+id/txt_record_symptoms"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="textMultiLine" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_column="0"
                android:layout_row="2"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:text="Activities"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <EditText
                        android:id="@+id/txt_record_activities"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="textMultiLine" />

                </LinearLayout>
            </RelativeLayout>

        </GridLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>